# KPIS_var3

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  app.py
app/controllers/: __init__.py  main_controller.py  validation.py
app/domain/: __init__.py
app/domain/formulas/: __init__.py  ipur.py
app/models/: entities.py
app/repositories/: __init__.py  base.py  file_repository.py
app/services/: import_export_service.py  report_service.py
app/utils/: __init__.py  constants.py
app/views/: __init__.py  main_view.py
docs/examples/: sample_data.csv  sample_data.json
ipur_desktop.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_import_export.py  test_ipur.py
