[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipur-desktop"
version = "1.0.0"
description = "Кроссплатформенное настольное приложение для расчёта ИПУР"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8,<4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
